--- a/events/2025-01-10.md
+++ b/events/2025-01-10.md
@@ -1,8 +1,10 @@
 ---
 date: 2025-01-10
-time: 18:00
+time: 16:30
 location: "Memorial Glade, UC Berkeley"
 meetup_link: "https://partiful.com/e/YQdVcNjN5LSTN1FI97fa"
 ---
+
+NOTE: This event has been rescheduled from 6pm to 4:30pm.
 
 Combat in the spirit of friendship! We'll have a grassy surface for wrestling, and hopefully a couple pairs of boxing gloves for striking. If you have your own equipment, you're encouraged to bring it.
